# codexgd

./: .gitignore  README.md  pylintrc  pyproject.toml
.github/: FUNDING.yml
codexgd/: __init__.py  __main__.py  callback.py  codex.py  exceptions.py  problem.py  rule.py
codexgd/gdscript/: __init__.py  gdscript_codex.py  util.py
codexgd/presets/: official.yml  recommended.yml
codexgd/rules/: class_names.py  comment_spacing.py  common.py  end_with_newline.py  enum_names.py  function_names.py  inner_class_names.py  line_length.py  no_invalid_chars.py  parameter_names.py  quotes.py  require_doc_strings.py  require_extends.py  signal_names.py  trailing_commas.py  variable_names.py
plugins/godot/: codex.yml  icon.svg.import  main.tscn  project.godot
plugins/godot/addons/codexgd/: annotation_layer.gd  plugin.cfg  plugin.gd
tests/: common.py  test_codex.py  test_gdscript_codex.py  test_gdscript_rules.py  test_rules.py
tests/env/: codex.yml  example.gd
tests/env/rules/: always_rule.py  custom_rule.py  never_rule.py  rule_with_state.py
