[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codexgd"
description = "A configurable and extendable Godot style analyzer."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{ name="HolonProduction", email="holonproduction@gmail.com" }]
keywords = ["lint", "godot", "gdscript", "style", "analyzer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
]
dynamic = ["version"]
dependencies = [
  "gdtoolkit@git+https://github.com/Scony/godot-gdscript-toolkit.git",
  "pyyaml",
  "lark",
  "regex",
  "typing-extensions >=4.5, <5",
]

[project.urls]
"Homepage" = "https://github.com/holonproduction/codexgd"
"Bug Tracker" = "https://github.com/holonproduction/codexgd/issues"

[project.scripts]
codexgd = "codexgd.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "codexgd/__about__.py"

[tool.hatch.build]
packages = ["codexgd"]

[tool.hatch.envs.default]
dependencies = [
  "pylint",
  "black",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest",
]

[tool.hatch.envs.test.scripts]
run = "pytest"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]
